# docs/swagger.json
@@ -811,6 +811,20 @@
             }
           }
         }
+      },
+      "InternalServerError": {
+        "description": "Internal server error",
+        "content": {
+          "application/json": {
+            "schema": {
+              "$ref": "#/components/schemas/Error"
+            },
+            "example": {
+              "code": 500,
+              "message": "Internal server error"
+            }
+          }
+        }
       }
     }
   },
